<resources>
    <string name="app_name">MyAppTest002</string>
    <string name="mainActivity_WelcomeTo">Welcome to ROOMIE</string>

    <!--These are the names of the activities-->
    <string name="title_activity_after_the_first_click">AfterTheFirstClickActivity</string>
    <string name="search_roommate">룸메찾기</string>
    <string name="search_home">부동산</string>
    <string name="bulletin_board">게시판</string>
    <string name="tips">모현 꿀팁</string>
    <string name="mypage">마이페이지</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bulletin_board_title">자유게시판</string>
    <string name="signup_title">회원가입</string>
    <string name="id_here">아이디</string>
    <string name="id_duplicate_check">중복확인</string>
    <string name="pwd_here">비밀번호</string>
    <string name="pwd_again">비밀번호 확인</string>
    <string name="login_icon">로그인</string>
    <string name="signup_menu">가입하기</string>
    <string name="mypage_menu">마이페이지</string>
</resources>
