<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingStart="10dp"
    android:paddingRight="10dp"
    android:paddingEnd="10dp"
    android:background="@color/colorBackgroundDefault"
    android:orientation="vertical"
    tool:context="com.example.yks93.myapptest002.SignupOne" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textAlignment="center"
        android:textSize="30sp"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_here" />

            <EditText
                android:id="@+id/edittext_id_input_from_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                    "/>

            <Button
                android:id="@+id/btn_id_input_from_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_duplicate_check"
                />

        </LinearLayout>

</LinearLayout>